Remove upnp code to punch hole in firewall or NAT. Will add back something better later.